@@ -30,7 +30,13 @@ $id = isset($_GET['id']) ? $_GET['id'] : 0;
 if($LMS->UserExists($ownerid))
 {
 	$LMS->NodeSetU($ownerid, $_GET['access']);
+
 	$backid = $ownerid;
+	$redir = $SESSION->get('backto');
+	if($SESSION->get('lastmodule')=='usersearch')
+		$redir .= '&search=1';
+
+	$SESSION->redirect('?'.$redir.'#'.$backid);
 }
 
 if($LMS->NodeExists($id))
