@@ -24,6 +24,8 @@
  *  $Id$
  */
 
+$SESSION->save('backto', $_SERVER['QUERY_STRING']);
+
 if(isset($_POST['search']))
 	$search = $_POST['search'];
 
