@@ -17,6 +17,9 @@ version x.x.x (xx/xx/xxxx):
   - on customers list added nodes online status and icon for nodes connection 
     status change (alec)
   - additional filters for Customer Search, searching in service address (alec)
+  - most of icons resized to 16x16 (alec)
+  - fixed nodes and warnings enabling/disabling on Customer Search Results
+    list (alec)
     
 version 1.5.6 Baal (24/04/2005):
 
